# ox-tools

./: .cargo-heather.toml  .delta.toml  .gitattributes  .gitignore  .spelling  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Justfile  README.md  deny.toml  justfile  rustfmt.toml  spellcheck.toml
crates/automation/: Cargo.toml  README.md
crates/automation/src/: lib.rs
crates/cargo-anvil/: Cargo.toml  README.md
crates/cargo-anvil/docs/: verification.md
crates/cargo-anvil/docs/design/: ado.md  checks.md  containers.md  design.md  extensibility.md  github.md  local.md  updates.md
crates/cargo-anvil/docs/implementation-plans/: 0000.md  0001.md  0002.md
crates/cargo-anvil/src/: backend.rs  checksum.rs  cli.rs  decision.rs  io.rs  lib.rs  main.rs  manifest.rs  plan.rs  region.rs  run.rs  workspace.rs
crates/cargo-anvil/src/anvil/: mod.rs
crates/cargo-anvil/src/anvil/artifacts/: ado.rs  container.rs  github.rs  justfile.rs  mod.rs  region.rs
crates/cargo-anvil/src/catalog/: anvil.rs  artifact.rs  artifacts.rs  builder.rs  meta.rs  mod.rs
crates/cargo-anvil/src/emit/: ado.rs  cargo_toml.rs  github.rs  local.rs  managed_region.rs  mod.rs  owned_file.rs  shared_configs.rs
crates/cargo-anvil/templates/ado/: custom-pr-stages.yml  custom-scheduled-stages.yml  pr-root-pipeline.yml  pr-stages.yml  scheduled-root-pipeline.yml  scheduled-stages.yml
crates/cargo-anvil/templates/ado/steps/: advisory-comments.yml  group.yml  impact.yml  job.yml  setup.yml
crates/cargo-anvil/templates/github/: group-action.yml  impact-action.yml  pr-impl-workflow.yml  scheduled-impl-workflow.yml  setup-action.yml
crates/cargo-anvil/templates/justfiles/anvil/: checks.just  groups.just  helpers.just  impact.just  mod.just  runner.just  tiers.just  tools.just  versions.just
crates/cargo-anvil/templates/regions/: cargo-lints-body.toml  clippy.toml  deny-advisories.toml  deny-bans.toml  deny-licenses.toml  deny-sources.toml  gitattributes  justfile-imports.just  justfile-runner.just  rustfmt.toml  spellcheck.toml
crates/cargo-anvil/tests/: cli.rs  container_customization.rs  container_customization_bash.rs  extensibility.rs  fixtures.rs  impact.rs  schemas.rs  snapshots.rs  update.rs
crates/cargo-anvil/tests/fixtures/migration/: Cargo.toml  Justfile
crates/cargo-anvil/tests/snapshots/: snapshots__ado_backend.snap  snapshots__github_backend.snap  snapshots__local_only.snap
crates/cargo-coverage-gate/: AGENTS.md  Cargo.toml  README.md
crates/cargo-coverage-gate/docs/: design.md
crates/cargo-coverage-gate/docs/design/: main.md
crates/cargo-coverage-gate/docs/implementation-plans/: 0000.md
crates/cargo-coverage-gate/src/: aggregate.rs  attribute.rs  error.rs  lcov_cov.rs  lib.rs  llvm_cov.rs  threshold.rs  verdict.rs  workspace.rs
crates/cargo-coverage-gate/src/render/: markdown.rs  mod.rs  text.rs
crates/cargo-coverage-gate/tests/: cli.rs
crates/cargo-coverage-gate/tests/fixtures/lcov/: malformed.info  multi_file.info  single_file.info
crates/cargo-coverage-gate/tests/fixtures/llvm_cov/: empty.json  missing_required.json  multi_file.json  no_version.json  single_file.json  unknown_version.json  v3.json
crates/cargo-each/: Cargo.toml  README.md
crates/cargo-each/docs/design/: README.md
crates/cargo-each/src/: error.rs  filter.rs  lib.rs  plan.rs  select.rs  substitute.rs  workspace.rs
crates/cargo-each/tests/: cli.rs
crates/cargo-heather/: CHANGELOG.md  Cargo.toml  README.md
crates/cargo-heather/src/: comment.rs  error.rs  lib.rs  license.rs  process.rs
crates/cargo-heather/src/checker/: extract.rs  matcher.rs  mod.rs  strip.rs
crates/cargo-heather/tests/: cli.rs  powershell_ms.rs  powershell_ms_mit.rs  rust_apache.rs  rust_mit.rs  rust_ms_mit.rs  script_mit.rs  toml_mit.rs
crates/cargo-heather/tests/common/: mod.rs
crates/cargo_ensure_no_cyclic_deps/: CHANGELOG.md  Cargo.toml  README.md
crates/cargo_ensure_no_cyclic_deps/src/: lib.rs  main.rs
crates/cargo_ensure_no_cyclic_deps/tests/: integration_tests.rs
crates/cargo_ensure_no_cyclic_deps/tests/fixtures/with_self_dev_dep/: Cargo.toml
crates/cargo_heather/: Cargo.toml  README.md
crates/cargo_heather/src/: checker.rs  cli.rs  comment.rs  config.rs  error.rs  lib.rs  license.rs  main.rs  process.rs  scanner.rs
crates/cargo_heather/src/checker/: extract.rs  matcher.rs  mod.rs  strip.rs
crates/cargo_heather/tests/: cases.rs  cli.rs  integration_test.rs  rust_apache.rs  rust_mit.rs  rust_ms_mit.rs  script_mit.rs  strip_paragraph.rs  toml_mit.rs
crates/cargo_heather/tests/common/: mod.rs
crates/cargo_ox_check/: Cargo.toml  README.md
crates/cargo_ox_check/docs/: verification.md
crates/cargo_ox_check/docs/design/: ado.md  checks.md  design.md  github.md  local.md  updates.md
crates/cargo_ox_check/docs/implementation-plans/: 0000.md  0001.md
crates/cargo_ox_check/src/: backend.rs  checksum.rs  cli.rs  decision.rs  lib.rs  main.rs  manifest.rs  plan.rs  region.rs  run.rs  workspace.rs
crates/cargo_ox_check/src/emit/: ado.rs  cargo_toml.rs  github.rs  local.rs  managed_region.rs  mod.rs  owned_file.rs  shared_configs.rs
crates/cargo_ox_check/templates/ado/: nightly-root-pipeline.yml  nightly-stages.yml  pr-root-pipeline.yml  pr-stages.yml  scheduled-root-pipeline.yml  scheduled-stages.yml
crates/cargo_ox_check/templates/github/: group-action.yml  impact-action.yml  nightly-impl-workflow.yml  nightly-root-workflow.yml  pr-impl-workflow.yml  pr-root-workflow.yml  scheduled-impl-workflow.yml  scheduled-root-workflow.yml  setup-action.yml
crates/cargo_ox_check/templates/regions/: cargo-lints-body.toml  cargo-member-lints.toml  deny.toml  rustfmt.toml  spellcheck.toml
crates/cargo_ox_check/tests/: schemas.rs  snapshots.rs  update.rs
crates/cargo_ox_check/tests/snapshots/: snapshots__ado_backend.snap  snapshots__github_backend.snap  snapshots__local_only.snap
crates/cargo_ox_ci/: Cargo.toml  design.md
crates/cargo_ox_ci/docs/: verification.md
crates/cargo_ox_ci/docs/design/: ado.md  checks.md  design.md  github.md  local.md  updates.md
crates/cargo_ox_ci/src/: main.rs
(+244 files in other folders)
