# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cargo-anvil"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["The Oxidizer Project Authors"]
description = "Opinionated, unified Rust build and cloud-workflow scaffolding for GitHub Actions and Azure DevOps"
readme = "README.md"
repository = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo-anvil"
homepage = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo-anvil"
keywords = ["cargo", "subcommand", "workflows", "just", "github-actions"]
categories = ["development-tools::cargo-plugins"]

[package.metadata.cargo_check_external_types]
# - `ohno::app::error::AppError`: project-wide app error type from
#   the `ohno` crate. Every fallible anvil entry point
#   returns it so that callers can use ohno's `?` and `AppErr`
#   conversions uniformly. Intentional; mirrors the same allowlist
#   entry in cargo-coverage-gate and automation.
#
allowed_external_types = ["ohno::app::error::AppError"]

[[bin]]
name = "cargo-anvil"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context", "string"] }
mutants = { workspace = true }
ohno = { workspace = true, features = ["app-err"] }
sha2 = { workspace = true, features = ["std"] }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[dev-dependencies]
insta = { workspace = true, features = ["filters"] }
tempfile = { workspace = true }
walkdir = { workspace = true }

# >>> anvil-managed: anvil-lints
[lints]
workspace = true
# <<< anvil-managed: anvil-lints
