# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cargo-each"
description = "A cargo subcommand that runs a command over a cargo-style selection of workspace members"
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "cargo", "subcommand", "workspace", "ci"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo-each"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
# The `#[ohno::error]` attribute on `EachError` implements traits in
# `ohno` that transitively appear in the public API. Allow the whole
# `ohno` namespace rather than tracking individual re-exposed items.
allowed_external_types = ["ohno::*"]

[[bin]]
name = "cargo-each"
path = "src/bin/cargo-each/main.rs"

[dependencies]
cargo_metadata = { workspace = true }
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context"] }
mutants = { workspace = true }
ohno = { workspace = true, features = ["app-err"] }
serde_json = { workspace = true, features = ["std"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

# >>> anvil-managed: anvil-lints
[lints]
workspace = true
# <<< anvil-managed: anvil-lints
