# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cargo-heather"
description = "A cargo subcommand to validate license headers in Rust, TOML, PowerShell, Just, and env source files"
version = "0.3.0"
readme = "README.md"
keywords = ["oxidizer", "cargo", "subcommand", "license", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo-heather"

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo_check_external_types]
allowed_external_types = []

[package.metadata.ox-gen-readme]
# README is hand-crafted (logo + crates.io/docs.rs badges); see ../README.j2
# for the template ox-gen-readme uses for other crates.
disable = true

[[bin]]
name = "cargo-heather"
path = "src/bin/cargo-heather/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context"] }
ohno = { workspace = true, features = ["app-err"] }
serde = { workspace = true, features = ["derive", "alloc"] }
toml = { workspace = true, features = ["parse", "display", "serde"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
tempfile = { workspace = true }

# >>> ox-check-managed: ox-check-lints
[lints]
workspace = true
# <<< ox-check-managed: ox-check-lints
