# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cargo_heather"
description = " A cargo subcommand to validate license headers in Rust and TOML source files"
version = "0.1.0"
readme = "README.md"
keywords = ["oxidizer", "cargo", "subcommand", "license", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository = "https://github.com/microsoft/oxidizer/tree/main/crates/cargo_heather"

[[bin]]
name = "cargo-heather"
path = "src/main.rs"

[package.metadata.docs.rs]
all-features = true

[dependencies]
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context"] }
ohno = { workspace = true, features = ["app-err"] }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true, features = ["parse", "display"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
