# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "cargo-ox-check"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["The Oxidizer Project Authors"]
description = "Opinionated, unified Rust build/CI scaffolding for GitHub Actions and Azure DevOps"
readme = "README.md"
repository = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo_ox_check"
homepage = "https://github.com/microsoft/ox-tools/tree/main/crates/cargo_ox_check"
keywords = ["cargo", "subcommand", "ci", "just", "github-actions"]
categories = ["development-tools::cargo-plugins"]

[[bin]]
name = "cargo-ox-check"
path = "src/main.rs"

[package.metadata.cargo_check_external_types]
allowed_external_types = ["clap_builder::derive::*", "anyhow::Error"]

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = ["derive", "std", "help", "usage", "error-context"] }
thiserror = { workspace = true, features = ["std"] }
toml_edit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
walkdir = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
